# pico-dino

./: LICENSE  README.md  dino-wiring.fzz
src/: CMakeLists.txt  dino.c
src/picoLCD/: copyright-notice.md
